--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "lodash",
+              "@ibsheet/loader"
+            ],
             "outputPath": "dist/loader-angular-guide-samples",
             "index": "src/index.html",
             "main": "src/main.ts",
